--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,45 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
+@charset "UTF-8";
+/* CSS Document */
 
-html {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-
-  font: normal 100%/1.5 sans-serif;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
+img{
+	width: 90%;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+.quote{
+	background: rgba(0,0,0,0.30);	
+	color: white;
+	font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, serif
+	width: 90%;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+h2{
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #CCC;
+	font-size: 1rem;
 }
 
-img {
-  display: block;
-  width: 100%;
+.box1{
+	/*background:pink;*/
+	width: 25%;
+	float:left;
+	padding:10px;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.box2{
+	/*background:blue;*/
+	width:25%;
+	float:left;
+	border-left: 1px solid#999;
+	padding:10px;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.box3{
+	/*background:green;*/
+	width:25%;
+	float:left;
+	border-left: 1px solid#999;
+	padding:10px;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
